--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -93,6 +93,9 @@
               <p>&#8457;</p>  
           </div>
       </div>
+      <div class="events">
+        <h3>Annual Events : </h3>
+      </div>
     <section class="article">
       <img class="articlePic" src="/lesson11/images/preston/articlePic.jpg" alt="lightning and city">
       <h3>The importance of weather forecast knowledge</h3>
@@ -151,6 +154,7 @@
         </div> 
         <span id="lastUpdate"></span>
   </footer>
+  <script src="/lesson11/js/preston/events.js"></script>
   <script src="/lesson11/js/preston/lastUpdate.js"></script>
   <script src="/lesson11/js/preston/toggleMenu.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
