--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -37,7 +37,7 @@
   </nav>
   <main>
     <div class="Preston">
-      <h2>Preston Idaho</h2>
+      <h2>Preston</h2>
     </div>
     <div class="heroBox">
       <div class="summaryBox">
@@ -94,7 +94,7 @@
           </div>
       </div>
       <div class="events">
-        <h3>Annual Events : </h3>
+        <h3>Upcoming Events : </h3>
       </div>
     <section class="article">
       <img class="articlePic" src="/lesson11/images/preston/articlePic.jpg" alt="lightning and city">
