--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -94,7 +94,7 @@
           </div>
       </div>
       <div class="events">
-        <h3>Annual Events : </h3>
+        <h3>Upcoming Events : </h3>
       </div>
     <section class="article">
       <img class="articlePic" src="/lesson11/images/sodasprings/articlePic.jpg" alt="rain picture">
