--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li>Lesson 08: <a href="https://vasilybelan.github.io/lesson8/tablebuild.html">My Table</a> | <a href="https://vasilybelan.github.io/lesson8/stormcenter.html">Storm Center</a>
                 <li>Lesson 09: <a href="https://vasilybelan.github.io/lesson9/index.html">Home</a> | <a href="https://vasilybelan.github.io/lesson9/prophets.html">Prophets</a> 
                 <li>Lesson 10: <a href="https://vasilybelan.github.io/lesson10/preston-10.html">Preston with API</a>
-                <li>Lesson 11: <a href="https://vasilybelan.github.io/lesson11/home.html">The weather site(last version)</a>
+                <li>Lesson 11: <a href="https://vasilybelan.github.io/lesson11/home.html">The weather site(latest version)</a>
             </ul>
         </main>
         <footer>
