--- a/scoots/index.html
+++ b/scoots/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Scoots Site</title>
+    <title>Scoots Site | Home page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Scoots Site | Home page">
@@ -124,9 +124,8 @@
         </div> 
         <span id="lastUpdate"></span>
   </footer>
-  <script src="/scoots/js/homeRental.js"></script>
-  <script src="/lesson11/js/preston/lastUpdate.js"></script>
-  <script src="/lesson11/js/preston/toggleMenu.js"></script>
+  <script src="/scoots/js/lastUpdate.js"></script>
+  <script src="/scoots/js/toggleMenu.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   <script src="/scoots/js/weather.js"></script>  
 </body>
