--- a/scoots/reserve.html
+++ b/scoots/reserve.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Scoots Site | Rental page</title>
+    <title>Scoots Site | Reservations page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Scoots Site | Rental page">
+    <meta name="description" content="Scoots Site | Reservations page">
     <link rel="shortcut icon" href="/scoots/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap">
     <link  rel="stylesheet" href="/scoots/css/small.css">
@@ -28,31 +28,32 @@
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
       <li><a href="/scoots/index.html">Home</a></li>
-      <li><a id="active" href="#">Rentals</a></li>
-      <li><a href="/scoots/reservations.html">Reservations</a></li>
+      <li><a href="/scoots/rentals.html">Rentals</a></li>
+      <li><a id="active" href="#">Reservations</a></li>
       <li><a href="/scoots/tours.html">Tours</a></li>
       <li><a href="/scoots/contact.html">Contact</a></li>
     </ul>
   </nav>
-  <main>
-    <h2 class="rentalMainText">Rentals types: </h2>
-    <div class="rental">
-    </div>
- </main>
-  <footer>
-        <div>
-            <span id="copyright">
-                © 
-                <span id="year"></span> 
-                | Vasily Belan
-                <a id="refSpan"></a>
-            </span>
+    <main>
+       <div class="thanks">
+          <h2>Thank You for the Submission!</h2>
+            <p>Thanks for the information provided. We will analyze it and provide it on the site.</p>
         </div> 
-        <span id="lastUpdate"></span>
-  </footer>
-  <script src="/scoots/js/lastUpdate.js"></script>
-  <script src="/scoots/js/rentals.js"></script>
+  </main>
+  <footer>
+    <div>
+        <span id="copyright">
+            © 
+            <span id="year"></span> 
+            | Vasily Belan
+            <a id="refSpan"></a>
+        </span>
+    </div> 
+    <span id="lastUpdate"></span>
+</footer>
+<script src="/scoots/js/lastUpdate.js"></script>
   <script src="/scoots/js/toggleMenu.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>  
+<script src="/scoots/js/reservation.js"></script>
 </body>
 </html>
