--- a/scoots/index.html
+++ b/scoots/index.html
@@ -22,7 +22,6 @@
 		<div>Unforgettable adventures</div>
 	  </section>
   </header>
-  <hr class="hrHeader">
   <nav>
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
@@ -43,9 +42,7 @@
         <img  src="/scoots/images/cozumelBeach1200.jpg" alt="Cozumel Beach main photo">
       </picture> 
     </div>
-    <h2 class="rentalMainText">Rentals: </h2>
-    <div class="rentalHome">
-    </div>
+
   <div class="weather">
     <div id="fiveDay">
       <div class="forecast">
@@ -91,9 +88,22 @@
         <p>Humidity: <span id="hum"></span>%</p>
     </div>
   </div>
-      
-        <div class="contacts">
-          <h3>Contacts</h3>
+  <h2 class="text">The best rental solutions for your rest</h2>
+    <div class="rentalInfo">
+      <b>Honda Motor Scooters</b><br>
+      ~Honda Metropolitan (49cc) - 1 person<br>
+      ~Honda Dio (110cc) - 2 person<br>
+      ~Honda PCX150 (149cc) - 2 person<br>
+      <b>ATV Side-by-Side</b><br>
+      ~Honda Pioneer 1000<br>
+      <b>Jeep Rentals</b><br>
+      ~4-door Jeep Wrangler - manual with A/C - 5 people max<br>
+      ~2-door Jeep Wrangler - open air - manual - 4 people max<br>
+      <p>You can see more detailed information <a href="/scoots/rentals.html"><b>here</b></a></p>
+      <h2 class="text"><a href="/scoots/reservations.html">Reserve</a> in advance and nothing will interfere with your vacation!</h2>
+    </div>      
+    <div class="contacts">
+          <h3 class="text">Contacts</h3>
           <p>Emerald City</p>
           <p>Red Brick Street, 999</p>
           <p>(999)-999-9999</p>
@@ -108,8 +118,8 @@
             <span class="socialPic">
               <a href="#"><img  src="/scoots/images/youtube.png" alt="Youtube Icon"></a>
             </span> 
-        </div>
-        </div>
+          </div>    
+    </div>        
 
  </main>
   <footer>
