--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -22,7 +22,6 @@
 		<div>Unforgettable adventures</div>
 	  </section>
   </header>
-  <hr class="hrHeader">
   <nav>
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
@@ -34,7 +33,7 @@
     </ul>
   </nav>
   <main>
-    <h2 class="rentalMainText">Rentals types: </h2>
+    <h2 class="text">Rentals types</h2>
     <div class="rental">
     </div>
  </main>
