--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -22,7 +22,6 @@
 		<div>Unforgettable adventures</div>
 	  </section>
   </header>
-  <hr class="hrHeader">
   <nav>
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
@@ -34,10 +33,10 @@
     </ul>
   </nav>
   <main>
-    <div class="toursMainText">Places you absolutely must visit</div>
+    <h2 class="text">Places you absolutely must visit</h2>
     <section class="toursPlace">
         <img class="toursLeftPic" src="/scoots/images/museum.jpg" alt="Museum of the Island of Cozumel">
-        <h2>Museum of the Island of Cozumel</h2>
+        <a href="https://goo.gl/maps/FW2mFW37LQT8WiVc6"><h2> "Museum of the Island of Cozumel</h2></a>
         <div class="toursText">
             <p>In San Miguel is the Museum of the Island of Cozumel (Museo de la Isla de Cozumel) - the largest and most visited cultural center. 
                 The main part of its exposition is also devoted to the Maya Indians.In addition to archaeological artifacts, 
@@ -47,7 +46,7 @@
       </section>
       <section class="toursPlace">
         <img class="toursRightPic" src="/scoots/images/San-Gervasio-Mayan-Ruins-Cozumel.jpg" alt="Cozumel's Mayan Heritage: San Gervasio">
-        <h2> Cozumel's Mayan Heritage: San Gervasio</h2>
+        <a href="https://goo.gl/maps/4m6WRuDKX3bw63haA"><h2> Cozumel's Mayan Heritage: San Gervasio</h2></a>
         <div class="toursText">
             <p>More than 30 Mayan sites have been found on Cozumel, some of them in beautiful locations such as dense jungle or perched above pristine beaches. 
                 By far the most important is that of San Gervasio, built in AD 800 and located 16 kilometers from San Miguel de Cozumel. Highlights of a visit include seeing the Temple of 
@@ -59,7 +58,7 @@
       </section>
       <section class="toursPlace">
         <img class="toursLeftPic" src="/scoots/images/Punta_Sur_Ecological_Park.jpg" alt="Punta Sur Eco Beach Park">
-        <h2>Punta Sur Eco Beach Park</h2>
+        <a href="https://goo.gl/maps/WZJG6FnLPZN3XMMJ9"><h2>Punta Sur Eco Beach Park</h2></a>
         <div class="toursText">
             <p>A fun place to explore the diversity of Cozumel's coastline and experience its flora and fauna, the Punta Sur Eco Beach Park is the largest eco park on the island. 
                 Located at the southern tip of the island, Punta Sur provides plenty of great swimming and beach fun, as well as a chance to enjoy some snorkeling, scuba diving, and kayaking. 
