--- a/scoots/scoots/index.html
+++ b/scoots/scoots/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Scoots Site | Home page">
     <link rel="shortcut icon" href="/scoots/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <link  rel="stylesheet" href="/scoots/css/small.css">
     <link rel="stylesheet" href="/scoots/css/medium.css">
     <link rel="stylesheet" href="/scoots/css/large.css">
@@ -99,7 +100,7 @@
       <b>Jeep Rentals</b><br>
       ~4-door Jeep Wrangler - manual with A/C - 5 people max<br>
       ~2-door Jeep Wrangler - open air - manual - 4 people max<br>
-      <p>You can see more detailed information <a href="/scoots/rentals.html"><b>here</b></a></p>
+      <p><i>You can see more detailed information <a href="/scoots/rentals.html"><b>here</b></i></a></p>
       <h2 class="text"><a href="/scoots/reservations.html">Reserve</a> in advance and nothing will interfere with your vacation!</h2>
     </div>      
     <div class="contacts">
