--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Scoots Site | Contact page">
     <link rel="shortcut icon" href="/scoots/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <link  rel="stylesheet" href="/scoots/css/small.css">
     <link rel="stylesheet" href="/scoots/css/medium.css">
     <link rel="stylesheet" href="/scoots/css/large.css">
