--- a/scoots/index.html
+++ b/scoots/index.html
@@ -90,21 +90,21 @@
     </div>
   </div>
   <h2 class="text">The best rental solutions for your rest</h2>
-    <div class="rentalInfo">
-      <b>Honda Motor Scooters</b><br>
-      ~Honda Metropolitan (49cc) - 1 person<br>
-      ~Honda Dio (110cc) - 2 person<br>
-      ~Honda PCX150 (149cc) - 2 person<br>
-      <b>ATV Side-by-Side</b><br>
-      ~Honda Pioneer 1000<br>
-      <b>Jeep Rentals</b><br>
-      ~4-door Jeep Wrangler - manual with A/C - 5 people max<br>
-      ~2-door Jeep Wrangler - open air - manual - 4 people max<br>
-      <p><i>You can see more detailed information <a href="/scoots/rentals.html"><b>here</b></i></a></p>
-      <h2 class="text"><a href="/scoots/reservations.html">Reserve</a> in advance and nothing will interfere with your vacation!</h2>
-    </div>      
+      <div class="rentalInfo">
+        <b>Honda Motor Scooters</b><br>
+        ~Honda Metropolitan (49cc) - 1 person<br>
+        ~Honda Dio (110cc) - 2 person<br>
+        ~Honda PCX150 (149cc) - 2 person<br>
+        <b>ATV Side-by-Side</b><br>
+        ~Honda Pioneer 1000<br>
+        <b>Jeep Rentals</b><br>
+        ~4-door Jeep Wrangler - manual with A/C - 5 people max<br>
+        ~2-door Jeep Wrangler - open air - manual - 4 people max<br>
+        <p><i>You can see more detailed information <a href="/scoots/rentals.html"><b>here</b></i></a></p>
+        <h2 class="text"><a href="/scoots/reservations.html">Reserve</a> in advance and nothing will interfere with your vacation!</h2>
+      </div>   
     <div class="contacts">
-          <h3 class="text">Contacts</h3>
+          <h3 class="text">Contact <a href="/scoots/contact.html">us</a></h3>
           <p>Emerald City</p>
           <p>Red Brick Street, 999</p>
           <p>(999)-999-9999</p>
