--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -34,9 +34,10 @@
     </ul>
   </nav>
   <main>
-    <h2 class="text">Rentals types</h2>
+    <h2 class="textRentalPage">Rentals types</h2>
     <div class="rental">
     </div>
+    <h2 class="textRentalPage">If you have any questions, <a href="/scoots/contact.html">we</a> will be happy to help you</h2>
  </main>
   <footer>
         <div>
