--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -34,10 +34,21 @@
     </ul>
   </nav>
   <main>
+    <h2 class="text">Please, read the information before choosing a rental</h2>
+    <ul class="rentalInfoText"><li>A $50 security deposit is required to confirm reservations.</li>
+      <li>A valid drivers license is required in hand at time of rental.</li>
+      <li>No one under 12 years of age are allowed to ride on the scooters.</li>
+      <li>Fuel charge not included.</li>
+      <li>Unlimited mileage.</li>
+      <li>Liability insurance is free of charge.</li>
+      <li>Reservations rate requires 24 hour prior notification.</li>
+      <li>Free delivery to Cozumel hotel, Airbnb, or private residence for 2+ day rentals.</li>
+      <li>Payment via Google Pay, cash, credit card, debit card, or PayPal.</li>
+      <li>Rentals may be returned to either location.</li>
+    </ul>
     <form method="get" action="reserve.html">
         <fieldset>
             <legend>Personal Information</legend>
-            
             <label class="first">Full Name*: <input type="text" name="name" title="Just letters, 2 characters min" pattern="[A-Za-z\s]{2,}" required></label>
             <label class="first">Home state or country*: <input type="text" name="name" title="Just letters" pattern="[A-Za-z\s]{2,}" required ></label>
             <label class="first">Phone number*: <input type="tel" name="phonenumber" title="Just numbers 8 characters min" pattern="[0-9]{10,}" placeholder="123456789" required></label>
