--- a/scoots/index.html
+++ b/scoots/index.html
@@ -100,7 +100,7 @@
         <b>Jeep Rentals</b><br>
         ~4-door Jeep Wrangler - manual with A/C - 5 people max<br>
         ~2-door Jeep Wrangler - open air - manual - 4 people max<br>
-        <p><i>You can see more detailed information <a href="/scoots/rentals.html"><b>here</b></i></a></p>
+        <p><i>You can see more detailed information <a href="/scoots/rentals.html"><b>here</b></a></i></p>
         <h2 class="text"><a href="/scoots/reservations.html">Reserve</a> in advance and nothing will interfere with your vacation!</h2>
       </div>   
       <div class="contactsContainer">
