--- a/scoots/index.html
+++ b/scoots/index.html
@@ -38,9 +38,9 @@
     <div class="heroBox">
 
       <picture>
-        <source media="(max-width: 600px)" srcset="/scoots/images/cozumelBeach400.jpg">
-        <source media="(max-width: 800px)" srcset="/scoots/images/cozumelBeach800.jpg">
-        <img  src="/scoots/images/cozumelBeach1200.jpg" alt="Cozumel Beach main photo">
+        <source media="(max-width: 600px)" data-srcset="/scoots/images/placeholder.png" srcset="/scoots/images/cozumelBeach400.jpg">
+        <source media="(max-width: 800px)" data-srcset="/scoots/images/placeholder.png" srcset="/scoots/images/cozumelBeach800.jpg">
+        <img  data-src="/scoots/images/placeholder.png" src="/scoots/images/cozumelBeach1200.jpg" alt="Cozumel Beach main photo">
       </picture> 
     </div>
 
