--- a/scoots/index.html
+++ b/scoots/index.html
@@ -41,7 +41,7 @@
         <source media="(max-width: 600px)" data-srcset="/scoots/images/placeholder.png" srcset="/scoots/images/cozumelBeach400.jpg">
         <source media="(max-width: 800px)" data-srcset="/scoots/images/placeholder.png" srcset="/scoots/images/cozumelBeach800.jpg">
         <img  data-src="/scoots/images/placeholder.png" src="/scoots/images/cozumelBeach1200.jpg" alt="Cozumel Beach main photo">
-      </picture> 
+      </picture>
     </div>
 
   <div class="weather">
@@ -103,7 +103,30 @@
         <p><i>You can see more detailed information <a href="/scoots/rentals.html"><b>here</b></a></i></p>
         <h2 class="text"><a href="/scoots/reservations.html">Reserve</a> in advance and nothing will interfere with your vacation!</h2>
       </div>   
-       
+      <div class="contactsContainer">
+            <h3 class="text">Contact <a href="/scoots/contact.html">us</a></h3>
+          <div class="contacts">
+          <div class="contactsFirstRow">
+            <p>Centro de Cozumel</p>
+            <p>Av Lic Benito Juárez 9, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
+            <p>+78888888</p>
+            <p>info@scoots.com</p>
+            <div class="map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.888704647573!2d-86.9513780847195!3d20.510788186281207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e59ceea045c6d%3A0x4a6a485216e42379!2zQXYgTGljIEJlbml0byBKdcOhcmV6IDksIENlbnRybywgNzc2MDAgU2FuIE1pZ3VlbCBkZSBDb3p1bWVsLCBRLlIuLCDQnNC10LrRgdC40LrQsA!5e0!3m2!1sru!2sru!4v1595357804469!5m2!1sru!2sru" 
+                allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+          </div>
+          <div class="contactsSecondRow">
+            <p>Terminal Puerta Maya</p>
+            <p>Carr. Chancanab Km. 4.5, Carretera Costera Sur, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
+            <p>+78888889</p>
+            <p>info@scoots.com</p>
+            <div class="map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d934.4342677012454!2d-86.97549217077427!3d20.47598959914377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e5748cef5588f%3A0x87288899da90f3d3!2sA%20Touch%20of%20Gold!5e0!3m2!1sru!2sru!4v1595357734472!5m2!1sru!2sru" 
+                allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+          </div> 
+        </div>  
         <div class="socialIcons">
           <span class="socialPic">
             <a href="#"><img  src="/scoots/images/instagramm.png" alt="Instagramm Icon"></a>
