--- a/scoots/index.html
+++ b/scoots/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Scoots Site | Home page">
+    <meta http-equiv="Cache-Control" content="public" />
     <link rel="shortcut icon" href="/scoots/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="/scoots/css/medium.css">
     <link rel="stylesheet" href="/scoots/css/large.css">
     <link rel="stylesheet" href="/scoots/css/normalize.css">
+    
 </head>
 <body onload='getFive(3530103),forecast()'>
   <header>
