--- a/scoots/index.html
+++ b/scoots/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Scoots Site | Home page">
     <meta http-equiv="Cache-Control" content="public" />
+    <meta http-equiv="Cache-Control" content="max-age=360000, must-revalidate" />
     <link rel="shortcut icon" href="/scoots/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
