--- a/scoots/index.html
+++ b/scoots/index.html
@@ -122,10 +122,32 @@
             <p>Carr. Chancanab Km. 4.5, Carretera Costera Sur, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
             <p>+78888889</p>
             <p>info@scoots.com</p>
-            <div class="map">
+          </div>
+          <div id="map"></div>
+  <script>
+// Initialize and add the map
+function initMap() {
+// The location of Uluru
+var uluru = {lat: -25.344, lng: 131.036};
+// The map, centered at Uluru
+var map = new google.maps.Map(
+    document.getElementById('map'), {zoom: 4, center: uluru});
+// The marker, positioned at Uluru
+var marker = new google.maps.Marker({position: uluru, map: map});
+}
+  </script>
+  <!--Load the API from the specified URL
+  * The async attribute allows the browser to render the page while the API loads
+  * The key parameter will contain your own API key (which is not needed for this tutorial)
+  * The callback parameter executes the initMap() function
+  -->
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH4o4Kk700jXU3_1nK5ikal_5SS0TBVaw&callback=initMap">
+  </script>
+            <!--<div class="map">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d934.4342677012454!2d-86.97549217077427!3d20.47598959914377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e5748cef5588f%3A0x87288899da90f3d3!2sA%20Touch%20of%20Gold!5e0!3m2!1sru!2sru!4v1595357734472!5m2!1sru!2sru" 
                 allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>
+            </div>-->
           </div> 
         </div>  
         <div class="socialIcons">
