--- a/scoots/index.html
+++ b/scoots/index.html
@@ -151,9 +151,9 @@
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH4o4Kk700jXU3_1nK5ikal_5SS0TBVaw&callback=initMapCentro">
   </script>
-  <script async defer
+  <!--<script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH4o4Kk700jXU3_1nK5ikal_5SS0TBVaw&callback=initMapTerminal">
-  </script>
+  </script>-->
   <script src="/scoots/js/lastUpdate.js"></script>
   <script src="/scoots/js/toggleMenu.js"></script>
   <script src="/scoots/js/weather.js"></script>  
