--- a/scoots/index.html
+++ b/scoots/index.html
@@ -112,14 +112,14 @@
             <p>Av Lic Benito Juárez 9, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
             <p>+78888888</p>
             <p>info@scoots.com</p>
-            <div id="mapTerminal"></div>
+            <div onload="initMapCentro(1)" div="mapCentro"></div>
           </div>
           <div class="contactsSecondRow">
             <p>Terminal Puerta Maya</p>
             <p>Carr. Chancanab Km. 4.5, Carretera Costera Sur, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
             <p>+78888889</p>
             <p>info@scoots.com</p>
-            <div id="mapCentro"></div>
+            <div onload="initMapCentro(2)" div="mapTerminal"></div>
           </div>
           </div> 
         </div>  
@@ -151,9 +151,9 @@
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH4o4Kk700jXU3_1nK5ikal_5SS0TBVaw&callback=initMapCentro">
   </script>
-  <script async defer
+  <!--<script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDx1480uIg8Dr1HK5gC7Ad3AdfuWp3XQ-0&callback=initMapTerminal">
-  </script>
+  </script>-->
   <script src="/scoots/js/lastUpdate.js"></script>
   <script src="/scoots/js/toggleMenu.js"></script>
   <script src="/scoots/js/weather.js"></script>  
