--- a/scoots/index.html
+++ b/scoots/index.html
@@ -112,15 +112,15 @@
             <p>Av Lic Benito Juárez 9, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
             <p>+78888888</p>
             <p>info@scoots.com</p>
-            <div onload="initMapCentro(1)" div="mapCentro"></div>
           </div>
           <div class="contactsSecondRow">
             <p>Terminal Puerta Maya</p>
             <p>Carr. Chancanab Km. 4.5, Carretera Costera Sur, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
             <p>+78888889</p>
             <p>info@scoots.com</p>
-            <div onload="initMapCentro(2)" div="mapTerminal"></div>
+            <div id="map"></div>
           </div>
+          
           </div> 
         </div>  
         <div class="socialIcons">
