--- a/scoots/index.html
+++ b/scoots/index.html
@@ -108,13 +108,13 @@
             <h3 class="text">Contact <a href="/scoots/contact.html">us</a></h3>
           <div class="contacts">
           <div class="contactsFirstRow">
-            <p>Centro de Cozumel</p>
+            <p><b>Centro de Cozumel</b></p>
             <p>Av Lic Benito Juárez 9, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
             <p>+78888888</p>
             <p>info@scoots.com</p>
           </div>
           <div class="contactsSecondRow">
-            <p>Terminal Puerta Maya</p>
+            <p><b>Terminal Puerta Maya</b></p>
             <p>Carr. Chancanab Km. 4.5, Carretera Costera Sur, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
             <p>+78888889</p>
             <p>info@scoots.com</p>
