--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -160,5 +160,6 @@
 </footer>
 <script src="/scoots/js/lastUpdate.js"></script>
 <script src="/scoots/js/toggleMenu.js"></script>
+<script src="/scoots/js/map.js"></script> 
 </body>
 </html>
