--- a/scoots/index.html
+++ b/scoots/index.html
@@ -110,14 +110,14 @@
           <div class="contactsFirstRow">
             <p><b>Centro de Cozumel</b></p>
             <p>Av Lic Benito Juárez 9, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
-            <p>+78888888</p>
-            <p>info@scoots.com</p>
+            <a href="tel:+78888888" title="+78888888"><p>+78888888</p></a>
+            <a href="mailto:info@scoots.com" class="mail-to" title="email"><p>info@scoots.com</p></a>
           </div>
           <div class="contactsSecondRow">
             <p><b>Terminal Puerta Maya</b></p>
             <p>Carr. Chancanab Km. 4.5, Carretera Costera Sur, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
-            <p>+78888889</p>
-            <p>info@scoots.com</p>
+            <a href="tel:+78888889" title="+78888889"><p>+78888889</p></a>
+            <a href="mailto:info@scoots.com" class="mail-to" title="email"><p>info@scoots.com</p></a>
             
           </div>
           <div id="map"></div>
@@ -151,6 +151,7 @@
   </script>
   <script src="/scoots/js/lastUpdate.js"></script>
   <script src="/scoots/js/toggleMenu.js"></script>
-  <script src="/scoots/js/weather.js"></script> 
+  <script src="/scoots/js/weatherAndMap.js"></script>
+  <script src="/scoots/js/map.js"></script> 
 </body>
 </html>
