--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -74,7 +74,7 @@
                 <option value="4">
             </datalist>
             <p>
-                <label class="second">From <input type="date" name="date" min='1899-01-01' max='2000-13-13' required></label>
+                <label class="second">From <input type="date" id="test_Date"name="date" min='2020-01-01' max='2000-13-13' required></label>
                 <input type="time" id="timeFrom" name="timeFrom" min="09:00" max="00:00" > 
                 <label class="second">to <input type="date" name="date" required></label>
                 <input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" >
@@ -90,7 +90,7 @@
 
         <fieldset>
             <legend>Comments</legend>
-            <label class="comment" class="first" >Anything else? Just tell us:
+            <label class="comment" class="first" ><p>Anything else? Just tell us:</p>
             <textarea name="comments" class="comment"></textarea>
             </label> 
         </fieldset>
@@ -110,6 +110,5 @@
   </footer>
   <script src="/scoots/js/lastUpdate.js"></script>
   <script src="/scoots/js/toggleMenu.js"></script>
-  <script src="/scoots/js/reservation.js"></script>
 </body>
 </html>
