--- a/scoots/reserve.html
+++ b/scoots/reserve.html
@@ -35,8 +35,8 @@
   </nav>
     <main>
        <div class="thanks">
-          <h2>Thank You for the Submission!</h2>
-            <p>Thanks for the information provided. We will analyze it and provide it on the site.</p>
+          <h2>Thank You for Your Reservation</h2>
+            <p>Please, input your deposit information:</p>
         </div> 
   </main>
   <footer>
