--- a/scoots/index.html
+++ b/scoots/index.html
@@ -149,8 +149,7 @@
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH4o4Kk700jXU3_1nK5ikal_5SS0TBVaw&callback=initMapCentro">
   </script>
-  <script src="/scoots/js/lastUpdate.js"></script>
-  <script src="/scoots/js/toggleMenu.js"></script>
+  <script src="/scoots/js/lastUpdateAndToggleMenu.js"></script>
   <script src="/scoots/js/weatherAndMap.js"></script>
   <script src="/scoots/js/map.js"></script> 
 </body>
