--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -50,8 +50,7 @@
         </div> 
         <span id="lastUpdate"></span>
   </footer>
-  <script src="/scoots/js/lastUpdate.js"></script>
   <script src="/scoots/js/rentals.js"></script>
-  <script src="/scoots/js/toggleMenu.js"></script>
+  <script src="/scoots/js/lastUpdateAndToggleMenu.js"></script>
 </body>
 </html>
