--- a/scoots/index.html
+++ b/scoots/index.html
@@ -151,6 +151,7 @@
   </script>
   <script src="/scoots/js/lastUpdateAndToggleMenu.js"></script>
   <script src="/scoots/js/weatherAndMap.js"></script>
-  <script src="/scoots/js/map.js"></script> 
+  <script src="/scoots/js/map.js"></script>
+  <script src="/scoots/js/lastUpdate.js"></script>
 </body>
 </html>
