--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -82,6 +82,6 @@
         </div> 
         <span id="lastUpdate"></span>
   </footer>
-  <script src="/scoots/js/lastUpdateAndToggleMenu.js"></script>
+  <script src="/scoots/js/lastUpdate.js"></script>
 </body>
 </html>
