--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -102,8 +102,8 @@
       </div> 
       <span id="lastUpdate"></span>
 </footer>
-<script src="/scoots/js/lastUpdateAndToggleMenu.js"></script>
-<script src="/scoots/js/map.js"></script> 
+<script src="/scoots/js/mapAndToggleMenu.js"></script>
+<script src="/scoots/js/lastUpdate.js"></script> 
 <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH4o4Kk700jXU3_1nK5ikal_5SS0TBVaw&callback=initMapCentro">
   </script>
