--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -51,6 +51,6 @@
         <span id="lastUpdate"></span>
   </footer>
   <script src="/scoots/js/rentals.js"></script>
-  <script src="/scoots/js/lastUpdateAndToggleMenu.js"></script>
+  <script src="/scoots/js/lastUpdate.js"></script>
 </body>
 </html>
