--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -108,6 +108,6 @@
         </div> 
         <span id="lastUpdate"></span>
   </footer>
-  <script src="/scoots/js/lastUpdateAndToggleMenu.js"></script>
+  <script src="/scoots/js/lastUpdate.js"></script>
 </body>
 </html>
