--- a/scoots/reserve.html
+++ b/scoots/reserve.html
@@ -50,7 +50,6 @@
     </div> 
     <span id="lastUpdate"></span>
 </footer>
-<script src="/scoots/js/lastUpdateAndToggleMenu.js"></script>
-<script src="/scoots/js/reservation.js"></script>
+<script src="/scoots/js/lastUpdate.js"></script>
 </body>
 </html>
