--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -78,9 +78,10 @@
       </span> 
     </div>
         <div class="newFeedback">
-            <p>Still have questions?</p>
+            
             <form method="get" action="reserve.html">
                 <fieldset>
+                    <legend>Still have questions?</legend>
                     <label class="first">Your name: <input type="text" name="name" title="Just letters, 2 characters min" pattern="[A-Za-z\s]{2,}" required></label>
                     <label class="first">Email: <input type="email" name="email" placeholder="example@gmail.com"></label>
                     <label class="comment" class="first" >Your question
