--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -52,5 +52,6 @@
   </footer>
   <script src="/scoots/js/rentals.js"></script>
   <script src="/scoots/js/lastUpdate.js"></script>
+  <script src="/scoots/js/mapAndToggleMenu.js"></script>
 </body>
 </html>
