--- a/scoots/reserve.html
+++ b/scoots/reserve.html
@@ -51,5 +51,6 @@
     <span id="lastUpdate"></span>
 </footer>
 <script src="/scoots/js/lastUpdate.js"></script>
+<script src="/scoots/js/mapAndToggleMenu.js"></script>
 </body>
 </html>
