--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -75,9 +75,9 @@
             </datalist>
             <p>
                 <label class="second">From <input type="date" id="test_Date"name="date" min='2020-01-01' max='2000-13-13' required></label>
-                <input type="time" id="timeFrom" name="timeFrom" min="09:00" max="00:00" > 
+                <label class="second"><input type="time" id="timeFrom" name="timeFrom" min="09:00" max="00:00" ></label>
                 <label class="second">to <input type="date" name="date" required></label>
-                <input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" >
+                <label class="second"></label><input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" ></label>
             </p>
             <label class="second">Office:
                 <select name="region"required>
