--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -76,8 +76,8 @@
             <p>
                 <label class="second">From <input type="date" id="test_Date"name="date" min='2020-01-01' max='2000-13-13' required></label>
                 <label class="second"><input type="time" id="timeFrom" name="timeFrom" min="09:00" max="00:00" ></label>
-                <label class="second">to <input type="date" name="date" required>:</label>
-                <label class="second"><input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" >:</label>
+                <label class="second">to <input type="date" name="date" required></label>
+                <label class="second"><input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" ></label>
             </p>
             <label class="second">Office:
                 <select name="region"required>
