--- a/scoots/index.html
+++ b/scoots/index.html
@@ -105,7 +105,7 @@
         <h2 class="text"><a href="/scoots/reservations.html">Reserve</a> in advance and nothing will interfere with your vacation!</h2>
       </div>   
       <div class="contactsContainer">
-            <h3 class="text">Contact <a href="/scoots/contact.html">us</a></h3>
+            <h3 class="textContacts">Contact <a href="/scoots/contact.html">us</a></h3>
           <div class="contacts">
           <div class="contactsFirstRow">
             <p><b>Centro de Cozumel</b></p>
