--- a/scoots/index.html
+++ b/scoots/index.html
@@ -44,7 +44,7 @@
         <img  data-src="/scoots/images/1.png" src="/scoots/images/cozumelBeach1200.jpg" alt="Cozumel Beach main photo">
       </picture>
     </div>
-
+    <h2 class="text">Forecast and current weather on Cozumel</h2>
   <div class="weather">
     <div id="fiveDay">
       <div class="forecast">
