--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -57,7 +57,7 @@
 
         <fieldset>
             <legend>Rental Information</legend>
-            <label class="second">Rental Type: <input list="rentalChoice" name="rentalChoice" required></label>
+            <label class="first">Rental Type: <input list="rentalChoice" name="rentalChoice" required></label>
             <datalist id="rentalChoice">
                 <option value="Honda Metro Scooter">
                 <option value="Honda Dio Scooter">
@@ -66,18 +66,18 @@
                 <option value="Jeep Wrangler - 4 door">
                 <option value="Jeep Wrangler - 2 door">  
             </datalist>
-            <label class="second">Amount: <input list="amount" name="amount" required></label>
+            <label class="first">Amount: <input list="amount" name="amount" required></label>
             <datalist id="amount">
                 <option value="1">
                 <option value="2">
                 <option value="3">
                 <option value="4">
             </datalist>
-                <label class="second">From <input type="date" id="test_Date" name="date" min='2020-01-01' required></label>
-                <label class="second"><input type="time" id="timeFrom" name="timeFrom" min="09:00" max="00:00" ></label>
-                <label class="second">to <input type="date" name="date" required></label>
-                <label class="second"><input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" ></label>
-            <label class="second">Office:
+                <label class="first">From <input type="date" id="test_Date" name="date" min='2020-01-01' required></label>
+                <label class="first"><input type="time" id="timeFrom" name="timeFrom" min="09:00" max="00:00" ></label>
+                <label class="first">to <input type="date" name="date" min='2020-01-01' required></label>
+                <label class="first"><input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" ></label>
+            <label class="first">Office:
                 <select name="region" required>
                     <option value="" selected disabled>Select Region...</option>
                     <option value="Playa del Carmen">Playa del Carmen</option>
