--- a/scoots/reserve.html
+++ b/scoots/reserve.html
@@ -28,7 +28,7 @@
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
       <li><a href="/scoots/index.html">Home</a></li>
       <li><a href="/scoots/rentals.html">Rentals</a></li>
-      <li><a id="active" href="#">Reservations</a></li>
+      <li><a id="active" href="/scoots/reservations.html">Reservations</a></li>
       <li><a href="/scoots/tours.html">Tours</a></li>
       <li><a href="/scoots/contact.html">Contact</a></li>
     </ul>
