--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -73,10 +73,10 @@
                 <option value="3">
                 <option value="4">
             </datalist>
-                <label class="first">From <input type="date" id="test_Date" name="date" min='2020-01-01' required></label>
-                <label class="first"><input type="time" id="timeFrom" name="timeFrom" min="09:00" max="00:00" ></label>
-                <label class="first">to <input type="date" name="date" min='2020-01-01' required></label>
-                <label class="first"><input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" ></label>
+                <label class="first">From<input type="date" id="test_Date" name="date" min='2020-01-01' required></label>
+                <label class="first">:<input type="time" id="timeFrom" name="timeFrom" min="09:00" max="00:00" ></label>
+                <label class="first">To<input type="date" name="date" min='2020-01-01' required></label>
+                <label class="first">:<input type="time" id="timeTo" name="timeTo" min="09:00" max="00:00" ></label>
             <label class="first">Office:
                 <select name="region" required>
                     <option value="" selected disabled>Select Region...</option>
