--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -82,13 +82,14 @@
                     <legend>Still have questions?</legend>
                     <label class="first">Your name: <input type="text" name="name" title="Just letters, 2 characters min" pattern="[A-Za-z\s]{2,}" required></label>
                     <label class="first">Email: <input type="email" name="email" placeholder="example@gmail.com"></label>
-                    <label class="comment" class="first" >Your question
+                    <label class="comment">Your question
                         <textarea name="comments" class="comment"></textarea>
                     </label> 
                 </fieldset>
                 <input type="submit" value='Sent' class="submitButton">
+            </form>
         </div>
-    
+            
 </main>
 <footer>
       <div>
