--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -49,7 +49,7 @@
         <a href="tel:+78888889" title="+78888889"><p>+78888889</p></a>
         <a href="mailto:info@scoots.com" class="mail-to" title="email"><p>info@scoots.com</p></a>
       </div>
-      <div id="map"></div>
+      <div id="map"><img src ="/scoots/images/1.png"></div>
       </div> 
     </div>  
     <div class="socialIcons">
