--- a/scoots/index.html
+++ b/scoots/index.html
@@ -120,7 +120,7 @@
             <a href="mailto:info@scoots.com" class="mail-to" title="email"><p>info@scoots.com</p></a>
             
           </div>
-          <div id="map"></div>
+          <div id="map"><img src="/scoots/images/1.png"></div>
           </div> 
         </div>  
         <div class="socialIcons">
