--- a/scoots/index.html
+++ b/scoots/index.html
@@ -109,18 +109,18 @@
           <div class="contacts">
           <div class="contactsFirstRow">
             <p><b>Centro de Cozumel</b></p>
-            <p>Av Lic Benito Juárez 9, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
+            <a href="/scoots/contact.html"><p>Av Lic Benito Juárez 9, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p></a>
             <a href="tel:+78888888" title="+78888888"><p>+78888888</p></a>
             <a href="mailto:info@scoots.com" class="mail-to" title="email"><p>info@scoots.com</p></a>
           </div>
           <div class="contactsSecondRow">
             <p><b>Terminal Puerta Maya</b></p>
-            <p>Carr. Chancanab Km. 4.5, Carretera Costera Sur, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p>
+            <a href="/scoots/contact.html"><p>Carr. Chancanab Km. 4.5, Carretera Costera Sur, Centro, 77600 San Miguel de Cozumel, Q.R., Mexico</p></a> 
             <a href="tel:+78888889" title="+78888889"><p>+78888889</p></a>
             <a href="mailto:info@scoots.com" class="mail-to" title="email"><p>info@scoots.com</p></a>
             
           </div>
-          <div id="map"></div>
+          
           </div> 
         </div>  
         <div class="socialIcons">
